[package]
name = "gpu_prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build/main.rs"

[dependencies]
blake2s_u32 = { workspace = true }
common_constants = { workspace = true }
cs = { workspace = true, features = ["compiler"] }
fft = { workspace = true }
field = { workspace = true }
prover = { workspace = true, features = ["prover"] }
riscv_transpiler = { workspace = true, features = ["jit"] }
verifier_common = { workspace = true }
worker = { workspace = true }

era_cudart = "0.154"
era_cudart_sys = "0.154"

itertools = "*"
log = "0.4.29"
nvtx = "1"
rayon = "*"

[features]
default = ["security_80"]
bench = []
deterministic_pow = ["prover/deterministic_pow"]
gpu_prover_full_tests = []
log_gpu_mem_usage = []
log_gpu_stages_timings = []
security_80 = ["verifier_common/security_80"]
security_100 = ["verifier_common/security_100"]
test_no_inline = ["field/no_inline"]

[build-dependencies]
cc = "1"
cmake = "0.1"
era_cudart_sys = "0.154"

[dev-dependencies]
env_logger = "0.11"
era_criterion_cuda = "0.2"
criterion = "0.5"
itertools = "0.14"
rand = "0.9"
serial_test = "3"
blake2s_u32 = { workspace = true }
serde = { workspace = true }
serde_json = "*"

[[bench]]
name = "field"
harness = false
required-features = ["bench"]
