[package]
name = "gpu_prover_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
#execution_utils = { workspace = true, default-features = false, features = ["prover", "verifier_80"] }
execution_utils = { workspace = true, default-features = false, features = ["prover"] }
gpu_prover = { workspace = true }
risc_v_simulator = { workspace = true }

env_logger = "0.11"
hex = "0.4"
serde_json = "1.0"
