[package]
name = "gpu_witness_eval_generator_new"
version.workspace = true
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cs = { workspace = true , features = ["compiler"]}
field = { workspace = true }
serde = "1.0.219"
serde_json = "1.0.140"
