[package]
name = "prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
field = { workspace = true, default-features = false }
trace_holder = { workspace = true, optional = true }
worker = { workspace = true, optional = true }
common_constants = { workspace = true }
unroll = { workspace = true}
seq-macro = { workspace = true, optional = true }
fft = { workspace = true, optional = true }
cs = { workspace = true, default-features = false }
blake2s_u32 = { workspace = true, default-features = false }
poseidon2 = { workspace = true, default-features = false }
serde = { workspace = true }
serde-big-array = "*"
transcript = { workspace = true }
non_determinism_source = { workspace = true }
risc_v_simulator = { workspace = true, features = ["delegation"], optional = true }
riscv_transpiler = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }

rayon = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }
syn = { version = "2", optional = true }
quote = { version = "1", optional = true }
bit-set = { version = "0.8", optional = true }
lib-rv32-asm = {git = "https://github.com/shamatar/lib-rv32.git", optional = true }
serde_json = { version = "*", optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"]}
bincode = { version = "1.3" }
hex = "*"

[features]
prover = ["trace_holder", "worker", "seq-macro", "fft", "cs/compiler", "transcript/pow", "rayon", "risc_v_simulator", "riscv_transpiler", "proc-macro2", "syn", "quote", "bit-set", "lib-rv32-asm", "serde_json", "itertools"]
definitions_only = ["cs/definitions_only"]
# Print logs related to timings only.
timing_logs = []
# Will evaluate quotient on main domain for satisfiability checks
debug_satisfiable = []
# Will perform witness evaluation in synthesis functions
cs_debug = ["cs/debug_evaluate_witness"]
# Print detailed debug logs
debug_logs = ["timing_logs", "cs/debug_logs"]
profiling = ["debug_logs"]
default = ["prover", "cs_debug", "bincode"]

# Include test code for test in dependent crates
test = []
