[package]
name = "riscv_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
heapless = { version = "*", default-features = false, optional = true }
common_constants = { path = "../common_constants" }
seq-macro.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["std", "thread_rng", "std_rng"]}

[features]
uart = ["heapless"]
custom_panic = []
custom_allocator = []
boot_sequence = []
no_memcpy_override = []
no_memset_override = []
memcpy_via_precompile = []
default = []