[package]
name = "riscv_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
heapless = { version = "0.9", default-features = false, optional = true }

[features]
uart = ["heapless"]
custom_panic = []
custom_allocator = []
