[package]
name = "riscv_transpiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common_constants = { workspace = true }
cs = { workspace = true, default-features = false }
field = { workspace = true }
blake2s_u32 = { workspace = true }
ruint = { version = "1.16" }
worker = { workspace = true }
serde = { workspace = true }
seq-macro = { workspace = true }
inferno = { workspace = true, optional = true }
addr2line_new = { workspace = true, optional = true }
object = { workspace = true, optional = true }
serde-big-array = "*"
keccak = "*"

dynasmrt = { version = "4", optional = true }
riscv-decode = {version = "0.2", optional = true }
capstone = {version = "0.13", optional = true }

[features]
delegation = []
jit = ["dynasmrt", "riscv-decode", "capstone"]
flamegraph = ["dep:inferno", "dep:addr2line_new", "dep:object"]
default = ["jit"]

[dev-dependencies]
test_utils = { workspace = true }
lib-rv32-asm = {git = "https://github.com/shamatar/lib-rv32.git" }
hex = "*"
serial_test = "*"
