[package]
name = "transcript"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
blake2s_u32 = { workspace = true }
unroll = { workspace = true }
worker = { workspace = true, optional = true }

[features]
pow = ["worker"]
deterministic_pow = []
blake2_with_compression = ["blake2s_u32/blake2_with_compression"]

default = []
