[package]
name = "verifier_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
field = { workspace = true }
blake2s_u32 = { workspace = true, default-features = false }
transcript = { workspace = true, default-features = false }
cs = { workspace = true, default-features = false, features = ["definitions_only"] }
prover = { workspace = true, default-features = false, features = ["definitions_only"] }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
unroll = { workspace = true }
non_determinism_source = { workspace = true }
poseidon2 = { workspace = true, default-features = false }

[dev-dependencies]
prover = { workspace = true, features = ["prover"] }

[features]
security_80 = []
security_100 = []
worst_case_config_generation = [] # only used in tools/pow_config_generator
blake2_with_compression = ["blake2s_u32/blake2_with_compression", "transcript/blake2_with_compression"]
modular_ops = ["field/modular_ops"]
modular_ext4_ops = ["field/modular_ext4_ops"]
verifier_program = ["modular_ops"]
proof_utils = ["prover/prover"]
# If enabled, allows passing custom values into CSR.
replace_csr = ["prover/prover"]
