[package]
name = "verifier_generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prover = { workspace = true, features = ["prover"] }
serde.workspace = true
syn = { version = "2", features = ["extra-traits", "printing", "full", "visit-mut"]}
quote = { version = "1" }
proc-macro2 = "1"
proc-macro-error2 = "2.0"
serde_json = "1.0"

# [lib]
# proc-macro = true
