[package]
name = "witness_eval_generator"
version.workspace = true
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
field = { workspace = true, features = ["proc_macro_ops"]}
cs = { workspace = true, features = ["compiler"] }
prover = { workspace = true, features = ["prover"]  }
serde = { workspace = true }
syn = { version = "2", features = ["extra-traits", "printing", "full"]}
quote = { version = "1" }
proc-macro2 = "1"
proc-macro-error2 = "2.0"
serde_json = { version = "1.0"  }
bincode = { version = "1.3" }

[features]
