[package]
name = "witness_eval_generator"
version.workspace = true
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
field = { workspace = true, features = ["proc_macro_ops"]}
cs = { workspace = true, features = ["compiler"] }
serde = { workspace = true }
quote = { version = "1" }
proc-macro2 = "1"
serde_json = { version = "*"  }
bincode = { version = "1.3" }

[features]
