[package]
name = "prover_examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prover = { workspace = true, features = ["prover"] }
risc_v_cycles = { workspace = true }
trace_and_split = { workspace = true }
setups = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
bincode = { version = "1.3" }
transpose = "0.2"
itertools = { workspace = true }

# dependencies for gpu
gpu_prover = { workspace = true, optional = true }
nvtx = { version = "1", optional = true}
cs = { workspace = true, optional = true}

[dev-dependencies]
lib-rv32-asm = {git = "https://github.com/shamatar/lib-rv32.git"}

[features]
# When enabled, the crate will print detailed debug logs.
debug_logs = []
# Will perform satisfiability tests on witness
precheck_satisfied = []
# Will evaluate quotient on main domain for satisfiability checks
debug_satisfiable = ["prover/debug_satisfiable"]
# Print logs related to timings only.
timing_logs = []

default = ["timing_logs"]

gpu = ["gpu_prover", "nvtx", "cs"]
