[package]
name = "prover_examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
common_constants = { workspace = true }
prover = { workspace = true, features = ["prover"] }
risc_v_cycles = { workspace = true }
riscv_transpiler = { workspace = true }
trace_and_split = { workspace = true }
setups = { workspace = true, features = ["witness_eval_fn"]}
serde = { workspace = true }
serde_json = "*"
bincode = { version = "1.3" }
transpose = "0.2"
itertools = { workspace = true }
verifier_common = { workspace = true, default-features = false }

# dependencies for gpu
gpu_prover = { workspace = true, optional = true }
nvtx = { version = "1", optional = true }
cs = { workspace = true, optional = true }

[dev-dependencies]
lib-rv32-asm = {git = "https://github.com/shamatar/lib-rv32.git"}
full_statement_verifier = { path = "../../full_statement_verifier", features=["replace_csr", "security_80"] }

[features]
security_80 = ["verifier_common/security_80"]
security_100 = ["verifier_common/security_100"]
# When enabled, the crate will print detailed debug logs.
debug_logs = []
# Will perform satisfiability tests on witness
precheck_satisfied = []
# Will evaluate quotient on main domain for satisfiability checks
debug_satisfiable = ["prover/debug_satisfiable"]
# Print logs related to timings only.
timing_logs = []
verifiers = ["full_statement_verifier/verifiers"]

default = ["timing_logs", "security_80", "verifier_common/proof_utils"]

gpu = ["gpu_prover", "nvtx", "cs"]