[package]
name = "risc_v_cycles"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prover = { workspace = true, features = ["prover"] }
verifier_generator = { workspace = true }
serde = { workspace = true }
serde_json = "*"
