[package]
name = "setups"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prover = { workspace = true, features = ["prover"] }

risc_v_cycles = { workspace = true }
reduced_risc_v_machine = { workspace = true }
reduced_risc_v_log_23_machine = { workspace = true }
machine_without_signed_mul_div = { workspace = true }
final_reduced_risc_v_machine = { workspace = true }

blake2_with_compression = { workspace = true }
bigint_with_control = { workspace = true }
keccak_special5 = { workspace = true }

add_sub_lui_auipc_mop = { workspace = true }
inits_and_teardowns = { workspace = true }
jump_branch_slt = { workspace = true }
load_store_subword_only = { workspace = true }
load_store_word_only = { workspace = true }
mul_div = { workspace = true }
mul_div_unsigned = { workspace = true }
shift_binary_csr = { workspace = true }
unified_reduced_machine = { workspace = true }

serde = { workspace = true }
serde_json = "*"
serde-big-array = "*"
proc-macro2 = { version = "1" }
syn = { version = "2" }
quote = { version = "1" }
sha3 = { workspace = true }
hex = "*"

[features]
defaut = ["witness_eval_fn"]
witness_eval_fn = ["add_sub_lui_auipc_mop/witness_eval_fn", "jump_branch_slt/witness_eval_fn", "load_store_subword_only/witness_eval_fn", "load_store_word_only/witness_eval_fn", "mul_div/witness_eval_fn", "mul_div_unsigned/witness_eval_fn", "shift_binary_csr/witness_eval_fn", "unified_reduced_machine/witness_eval_fn"]
