[package]
name = "trace_and_split"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
setups = { workspace = true }
prover = { workspace = true, features = ["prover"] }
serde = { workspace = true }
worker = { workspace = true }
serde_json = "1.0"
