[package]
name = "zksync_os_hashed_fibonacci"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-airbender/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[dependencies]
common_constants = { path = "../../common_constants"}
riscv_common = { path = "../../riscv_common", features = ["boot_sequence", "no_memset_override"] }

[profile.release]
lto = true


[workspace]