cmake_minimum_required(VERSION 3.28)
# Cmake must be at least 3.28 - the earlier one didn't pass cuda_standard properly.
project(gpu_prover_native)
enable_language(CUDA)
if ((NOT DEFINED CMAKE_CUDA_ARCHITECTURES) OR (CMAKE_CUDA_ARCHITECTURES STREQUAL ""))
    set(CMAKE_CUDA_ARCHITECTURES native)
endif ()
option(AB_DETERMINISTIC_POW "Enable deterministic PoW search" OFF)
add_library(gpu_prover_native STATIC
        common.cuh
)
option(GPU_PROVER_BUILD_BENCH "Build bench kernels" OFF)
if (GPU_PROVER_BUILD_BENCH)
    add_subdirectory(bench)
endif ()
add_subdirectory(ntt)
add_subdirectory(ops)
add_subdirectory(prover)
add_subdirectory(primitives)
add_subdirectory(witness)
set_target_properties(gpu_prover_native PROPERTIES CUDA_STANDARD 20)
set_target_properties(gpu_prover_native PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
set_target_properties(gpu_prover_native PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
if (AB_DETERMINISTIC_POW)
    target_compile_definitions(gpu_prover_native PRIVATE AB_DETERMINISTIC_POW=1)
endif ()
# CCCL headers in CUDA 12+ require MSVC's standard conforming preprocessor.
if (MSVC)
    target_compile_options(gpu_prover_native PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-Xcompiler=/Zc:preprocessor>)
endif ()
target_compile_options(gpu_prover_native PRIVATE --expt-relaxed-constexpr)
target_compile_options(gpu_prover_native PRIVATE --ptxas-options=-v)
#target_compile_options(gpu_prover_native PRIVATE -lineinfo)
target_compile_options(gpu_prover_native PRIVATE --keep)
install(TARGETS gpu_prover_native DESTINATION .)
