[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "cli_lib"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
prover = { workspace = true, features = ["prover"] }
risc_v_cycles = { workspace = true }
trace_and_split = { workspace = true }
setups = { workspace = true }
serde = { workspace = true }
serde_json = "*"
prover_examples = {path = "../../circuit_defs/prover_examples"}
worker = {path = "../../worker"}
clap = { workspace = true }
blake2s_u32 = { workspace = true }
execution_utils = { path = "../../execution_utils", features = ["verifier_binaries"]}
field = { workspace = true }

risc_v_cycles_verifier = { path = "../../circuit_defs/risc_v_cycles/verifier", optional = true}
reduced_risc_v_machine_verifier = { path = "../../circuit_defs/reduced_risc_v_machine/verifier", optional = true }

blake2_with_compression_verifier = { path = "../../circuit_defs/blake2_with_compression/verifier", optional = true }

verifier_common = { workspace = true }

full_statement_verifier = { path = "../../full_statement_verifier", features=["replace_csr"], optional = true }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
sha3 = { package = "sha3", version = "*" }

gpu_prover = { workspace = true, optional = true }

env_logger = "0.11"
base64 = "0.21.7"


[features]

# If include verifiers is disabled, the compilation is a lot faster, but some commands (verify, verify-all) are not available.
include_verifiers = ["full_statement_verifier", "risc_v_cycles_verifier", "blake2_with_compression_verifier", "reduced_risc_v_machine_verifier", 
    "risc_v_cycles_verifier/replace_csr", "risc_v_cycles_verifier/proof_utils", 
    "verifier_common/replace_csr", "verifier_common/proof_utils",
    "reduced_risc_v_machine_verifier/replace_csr", "reduced_risc_v_machine_verifier/proof_utils",
    "field/no_inline"]

debug_logs = ["prover/debug_logs", "prover_examples/debug_logs"]
# if enabled - allow GPU for proving.
gpu = ["prover_examples/gpu", "gpu_prover"]